--- a/SwiftFormBuilder/Cell/ButtonCell/FormButtonTableViewCell.xib
+++ b/SwiftFormBuilder/Cell/ButtonCell/FormButtonTableViewCell.xib
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -23,7 +21,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53j-Fp-Ki9" customClass="VetryaButton" customModule="VTRFormBuilder" customModuleProvider="target">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="53j-Fp-Ki9" customClass="SwiftFormBuilderButton" customModule="VTRFormBuilder" customModuleProvider="target">
                         <rect key="frame" x="135" y="20" width="50" height="40"/>
                         <color key="backgroundColor" name="RedBlood"/>
                         <constraints>
@@ -54,11 +52,6 @@
             <point key="canvasLocation" x="137.68115942028987" y="159.04017857142856"/>
         </tableViewCell>
     </objects>
-    <designables>
-        <designable name="53j-Fp-Ki9">
-            <size key="intrinsicContentSize" width="52" height="32"/>
-        </designable>
-    </designables>
     <resources>
         <namedColor name="RedBlood">
             <color red="0.72549019607843135" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
