--- a/SwiftFormBuilder/Cell/DateCell/FormDateTableViewCell.xib
+++ b/SwiftFormBuilder/Cell/DateCell/FormDateTableViewCell.xib
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -37,7 +35,7 @@
                         <color key="textColor" name="RedBlood"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fEP-md-X3e" customClass="VetryaTextField" customModule="VTRFormBuilder" customModuleProvider="target">
+                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fEP-md-X3e" customClass="SwiftFormBuilderTextField" customModule="VTRFormBuilder" customModuleProvider="target">
                         <rect key="frame" x="18" y="27" width="378" height="40"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="40" id="lyQ-b5-0Xc"/>
@@ -81,11 +79,6 @@
             <point key="canvasLocation" x="69.565217391304358" y="307.70089285714283"/>
         </tableViewCell>
     </objects>
-    <designables>
-        <designable name="fEP-md-X3e">
-            <size key="intrinsicContentSize" width="4" height="18"/>
-        </designable>
-    </designables>
     <resources>
         <namedColor name="RedBlood">
             <color red="0.72549019607843135" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
